--- a/index.html
+++ b/index.html
@@ -9,24 +9,19 @@
       box-sizing: border-box;
     }
 
-    body {
+    html, body {
       margin: 0;
+      padding: 0;
+      height: 100%;
       font-family: 'Arial', sans-serif;
-      background-color: #ece5dd;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
     }
 
     .chat-container {
       display: flex;
       flex-direction: column;
-      width: 100%;
-      max-width: 480px;
       height: 100vh;
-      background-color: #fff;
-      position: relative;
+      width: 100vw;
+      background-color: #ece5dd;
       transition: background 0.3s, color 0.3s;
     }
 
@@ -39,8 +34,11 @@
       background-color: #075e54;
       color: #fff;
       text-align: center;
-      padding: 10px;
+      padding: 12px;
       font-weight: bold;
+      position: sticky;
+      top: 0;
+      z-index: 2;
     }
 
     .chat-container.dark .chat-header {
@@ -51,8 +49,11 @@
     .status {
       text-align: center;
       font-size: 0.85em;
-      padding: 5px;
+      padding: 6px;
       background-color: #f0f0f0;
+      position: sticky;
+      top: 48px;
+      z-index: 2;
     }
 
     .chat-container.dark .status {
@@ -105,6 +106,9 @@
       border-top: 1px solid #ccc;
       background-color: #fff;
       gap: 8px;
+      position: sticky;
+      bottom: 0;
+      z-index: 2;
     }
 
     .chat-container.dark .chat-input {
@@ -163,19 +167,12 @@
       border: none;
       border-radius: 10px;
       cursor: pointer;
-      z-index: 2;
+      z-index: 3;
     }
 
     .chat-container.dark .secret-btn {
       background-color: #0f0;
       color: #000;
-    }
-
-    @media (max-width: 600px) {
-      .chat-container {
-        height: 100vh;
-        border-radius: 0;
-      }
     }
   </style>
 </head>
@@ -221,7 +218,6 @@
       document.getElementById("chatContainer").classList.toggle("dark");
     }
 
-    // Enviar con Enter
     document.getElementById("messageInput").addEventListener("keydown", function(event) {
       if (event.key === "Enter") {
         event.preventDefault();
