--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>ChatMe</title>
+  <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0b/ChatMe_Icon.png/100px-ChatMe_Icon.png" type="image/x-icon"/>
   <style>
     * {
       box-sizing: border-box;
@@ -43,6 +44,7 @@
       position: sticky;
       top: 0;
       z-index: 2;
+      width: 100%;
     }
 
     .chat-container.dark .chat-header {
@@ -56,7 +58,7 @@
       padding: 6px;
       background-color: #e0e0e0;
       position: sticky;
-      top: 48px;
+      bottom: 70px;
       z-index: 2;
     }
 
