--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>ChatMe</title>
-  <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0b/ChatMe_Icon.png/100px-ChatMe_Icon.png" type="image/x-icon"/>
+  <link rel="icon" href="https://img.icons8.com/ios/50/000000/chat.png" />
   <style>
     * {
       box-sizing: border-box;
@@ -23,6 +23,9 @@
       height: 100vh;
       background-color: #f5f5f7;
       transition: background 0.3s, color 0.3s;
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
     }
 
     .chat-container.dark {
@@ -44,7 +47,6 @@
       position: sticky;
       top: 0;
       z-index: 2;
-      width: 100%;
     }
 
     .chat-container.dark .chat-header {
@@ -58,7 +60,7 @@
       padding: 6px;
       background-color: #e0e0e0;
       position: sticky;
-      bottom: 70px;
+      top: 48px;
       z-index: 2;
     }
 
@@ -232,6 +234,12 @@
       color: #0f0;
     }
 
+    .status-message {
+      text-align: center;
+      font-size: 0.9em;
+      margin-bottom: 10px;
+    }
+
     @media (max-width: 600px) {
       .bubble {
         max-width: 85%;
@@ -244,7 +252,7 @@
   <div class="chat-container" id="chatContainer">
     <button class="secret-btn" onclick="toggleSecret()">🔒</button>
     <div class="chat-header">💬 ChatMe</div>
-    <div class="status" id="status">Escribiendo como: Yo</div>
+    <div class="status-message" id="statusMessage">Escribiendo como: Yo</div>
     <div class="chat-box" id="chatBox"></div>
     <div class="chat-input">
       <button id="toggleBtn" class="toggle-btn" onclick="toggleUser()">←</button>
@@ -255,6 +263,19 @@
 
   <script>
     let currentUser = 1;
+
+    const backgrounds = [
+      'https://source.unsplash.com/random/800x600',
+      'https://source.unsplash.com/random/801x601',
+      'https://source.unsplash.com/random/802x602',
+      'https://source.unsplash.com/random/803x603',
+      'https://source.unsplash.com/random/804x604'
+    ];
+
+    function setRandomBackground() {
+      const randomIndex = Math.floor(Math.random() * backgrounds.length);
+      document.getElementById("chatContainer").style.backgroundImage = `url(${backgrounds[randomIndex]})`;
+    }
 
     function sendMessage() {
       const input = document.getElementById("messageInput");
@@ -292,7 +313,7 @@
       currentUser = currentUser === 1 ? 2 : 1;
       const status = currentUser === 1 ? "Escribiendo como: Yo" : "Escribiendo como: 👽";
       const arrow = currentUser === 1 ? "←" : "→";
-      document.getElementById("status").textContent = status;
+      document.getElementById("statusMessage").textContent = status;
       document.getElementById("toggleBtn").textContent = arrow;
     }
 
@@ -306,6 +327,8 @@
         sendMessage();
       }
     });
+
+    window.onload = setRandomBackground;  // Set random background when the page loads
   </script>
 
 </body>
