--- a/index.html
+++ b/index.html
@@ -6,67 +6,52 @@
   <title>ChatMe</title>
   <link rel="icon" href="https://img.icons8.com/ios/50/000000/chat.png" />
   <style>
-    * {
-      box-sizing: border-box;
-    }
+    * { box-sizing: border-box; }
 
     html, body {
-      margin: 0;
-      padding: 0;
+      margin: 0; padding: 0;
       height: 100%;
       font-family: Arial, sans-serif;
     }
 
     .chat-container {
-      display: flex;
-      flex-direction: column;
+      display: flex; flex-direction: column;
       height: 100vh;
-      background-color: #f5f5f7;
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
       transition: background 0.3s, color 0.3s;
     }
-
     .chat-container.dark {
-      background-color: #000;
       color: #0f0;
-      background: rgba(0, 0, 0, 0.7);
     }
 
+    /* Cabecera semitransparente */
     .chat-header {
-      background-color: #007aff;
+      background: rgba(0,122,255,0.8);
       color: #fff;
       text-align: center;
       padding: 12px;
       font-weight: bold;
       font-size: 1.1em;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 8px;
-      position: sticky;
-      top: 0;
-      z-index: 2;
+      position: sticky; top: 0; z-index: 2;
+      display: flex; align-items: center; justify-content: center; gap: 8px;
     }
-
     .chat-container.dark .chat-header {
-      background-color: #111;
+      background: rgba(17,17,17,0.8);
       color: #0f0;
     }
 
+    /* Estado semitransparente */
     .status-message {
+      background: rgba(224,224,224,0.8);
+      padding: 6px;
       text-align: center;
       font-size: 0.9em;
-      padding: 6px;
-      background-color: #e0e0e0;
-      position: sticky;
-      top: 48px;
-      z-index: 2;
+      position: sticky; top: 48px; z-index: 2;
     }
-
     .chat-container.dark .status-message {
-      background-color: #111;
+      background: rgba(17,17,17,0.8);
       color: #0f0;
     }
 
@@ -74,106 +59,87 @@
       flex: 1;
       padding: 12px 10px;
       overflow-y: auto;
-      display: flex;
-      flex-direction: column;
-      gap: 16px;
+      display: flex; flex-direction: column; gap: 16px;
     }
 
+    /* Contenedores de burbujas */
     .bubble-container {
-      display: flex;
-      align-items: flex-end;
-      gap: 8px;
+      display: flex; align-items: flex-end; gap: 8px;
     }
+    .bubble-container.user1 { justify-content: flex-end; }
+    .bubble-container.user2 { justify-content: flex-start; }
 
-    .bubble-container.user1 {
-      justify-content: flex-end;
-    }
-
-    .bubble-container.user2 {
-      justify-content: flex-start;
-    }
-
+    /* Avatares */
     .avatar {
-      width: 32px;
-      height: 32px;
+      width: 32px; height: 32px;
       border-radius: 50%;
-      background-color: #ccc;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 18px;
-      flex-shrink: 0;
+      background-color: rgba(204,204,204,0.8);
+      display: flex; align-items: center; justify-content: center;
+      font-size: 18px; flex-shrink: 0;
     }
-
     .chat-container.dark .avatar {
-      background-color: #111;
+      background-color: rgba(17,17,17,0.8);
     }
 
+    /* Burbujas animadas */
     .bubble {
       max-width: 70%;
-      padding: 10px 14px 18px 14px;
+      padding: 10px 14px 18px;
       border-radius: 20px;
-      word-wrap: break-word;
       position: relative;
-      font-size: 0.95em;
-      line-height: 1.4;
+      font-size: 0.95em; line-height: 1.4;
       box-shadow: 0 1px 3px rgba(0,0,0,0.1);
     }
-
-    .user1 .bubble {
+    .bubble.user1 {
       background-color: #007aff;
       color: #fff;
-      border-bottom-right-radius: 4px;
-      border-top-right-radius: 4px;
+      animation: slideInRight 0.3s ease-out;
     }
-
-    .user2 .bubble {
+    .bubble.user2 {
       background-color: #e5e5ea;
       color: #000;
-      border-bottom-left-radius: 4px;
-      border-top-left-radius: 4px;
+      animation: slideInLeft 0.3s ease-out;
     }
-
-    .chat-container.dark .user1 .bubble {
-      background-color: #0f0;
+    .chat-container.dark .bubble.user1 {
+      background-color: rgba(0,255,0,0.8);
       color: #000;
     }
-
-    .chat-container.dark .user2 .bubble {
-      background-color: #333;
+    .chat-container.dark .bubble.user2 {
+      background-color: rgba(51,51,51,0.8);
       color: #0f0;
     }
 
+    /* Keyframes de animación */
+    @keyframes slideInRight {
+      from { opacity: 0; transform: translateX(30px); }
+      to   { opacity: 1; transform: translateX(0); }
+    }
+    @keyframes slideInLeft {
+      from { opacity: 0; transform: translateX(-30px); }
+      to   { opacity: 1; transform: translateX(0); }
+    }
+
+    /* Check dentro de la burbuja */
     .check {
       position: absolute;
-      bottom: 4px;
-      right: 10px;
+      bottom: 4px; right: 10px;
       font-size: 0.7em;
       opacity: 0.6;
     }
-
-    .chat-container.dark .check {
+    .chat-container.dark .bubble .check {
       color: #000;
     }
 
-    .chat-container.dark .user2 .check {
-      color: #0f0;
-    }
-
     .chat-input {
-      display: flex;
-      align-items: center;
+      display: flex; align-items: center;
       padding: 10px;
+      background: rgba(255,255,255,0.8);
       border-top: 1px solid #ccc;
-      background-color: #fff;
       gap: 8px;
-      position: sticky;
-      bottom: 0;
-      z-index: 2;
+      position: sticky; bottom: 0; z-index: 2;
     }
-
     .chat-container.dark .chat-input {
-      background-color: #111;
+      background: rgba(17,17,17,0.8);
       border-top: 1px solid #0f0;
     }
 
@@ -185,61 +151,42 @@
       font-size: 1em;
       outline: none;
     }
-
     .chat-container.dark input[type="text"] {
       background-color: #000;
       color: #0f0;
       border: 1px solid #0f0;
     }
 
+    /* Botones */
     .send-btn {
       padding: 8px;
-      border: none;
-      background: none;
+      background: none; border: none;
       cursor: pointer;
     }
-
     .send-btn img {
-      width: 24px;
-      height: 24px;
+      width: 24px; height: 24px;
     }
-
     .chat-container.dark .send-btn img {
       filter: invert(1);
     }
-
     .toggle-btn {
-      font-size: 1.4em;
-      border: none;
-      background: none;
-      color: #007aff;
-      cursor: pointer;
+      font-size: 1.4em; background: none; border: none;
+      color: #007aff; cursor: pointer;
     }
-
     .chat-container.dark .toggle-btn {
       color: #0f0;
     }
-
     .secret-btn {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      font-size: 18px;
-      background: none;
-      color: #fff;
-      border: none;
-      cursor: pointer;
-      z-index: 3;
+      position: absolute; top: 10px; right: 10px;
+      font-size: 18px; background: none; border: none;
+      color: #fff; cursor: pointer; z-index: 3;
     }
-
     .chat-container.dark .secret-btn {
       color: #0f0;
     }
 
     @media (max-width: 600px) {
-      .bubble {
-        max-width: 85%;
-      }
+      .bubble { max-width: 85%; }
     }
   </style>
 </head>
@@ -254,71 +201,80 @@
       <button id="toggleBtn" class="toggle-btn" onclick="toggleUser()">←</button>
       <input type="text" id="messageInput" placeholder="Escribe un mensaje...">
       <button class="send-btn" onclick="sendMessage()">
-        <img src="https://img.icons8.com/ios/50/000000/sent.png" alt="Send">
+        <img src="https://img.icons8.com/ios/50/000000/sent.png" alt="Enviar">
       </button>
     </div>
   </div>
 
   <script>
     let currentUser = 1;
-
+    // Fondo aleatorio
     function setRandomBackground() {
-      const width = window.innerWidth;
-      const height = window.innerHeight;
-      const random = Math.floor(Math.random() * 1000); // para que no se repita por cache
-      const url = `https://picsum.photos/${width}/${height}?random=${random}`;
-      const container = document.getElementById("chatContainer");
-      container.style.backgroundImage = `url('${url}')`;
+      const w = window.innerWidth, h = window.innerHeight;
+      const rand = Math.floor(Math.random()*1000);
+      document.getElementById("chatContainer")
+        .style.backgroundImage = `url('https://picsum.photos/${w}/${h}?random=${rand}')`;
     }
 
     function sendMessage() {
-      const input = document.getElementById("messageInput");
-      const text = input.value.trim();
+      const inp = document.getElementById("messageInput");
+      const text = inp.value.trim();
       if (!text) return;
 
-      const container = document.createElement("div");
-      container.className = `bubble-container user${currentUser}`;
+      const cont = document.createElement("div");
+      cont.className = `bubble-container user${currentUser}`;
 
       const avatar = document.createElement("div");
       avatar.className = "avatar";
-      avatar.textContent = currentUser === 1 ? "😉" : "👽";
+      avatar.textContent = currentUser===1 ? "😉" : "👽";
 
       const bubble = document.createElement("div");
-      bubble.className = "bubble";
+      bubble.className = `bubble user${currentUser}`;
       bubble.textContent = text;
 
-      if (currentUser === 1) {
-        const check = document.createElement("span");
-        check.className = "check";
-        check.textContent = "✓✓";
-        bubble.appendChild(check);
+      if (currentUser===1) {
+        const ck = document.createElement("span");
+        ck.className = "check"; ck.textContent="✓✓";
+        bubble.appendChild(ck);
       }
 
-      container.appendChild(currentUser === 1 ? bubble : avatar);
-      container.appendChild(currentUser === 1 ? avatar : bubble);
+      // orden avatar/bubble según usuario
+      if (currentUser===1) {
+        cont.appendChild(bubble);
+        cont.appendChild(avatar);
+      } else {
+        cont.appendChild(avatar);
+        cont.appendChild(bubble);
+      }
 
-      const chatBox = document.getElementById("chatBox");
-      chatBox.appendChild(container);
-      chatBox.scrollTop = chatBox.scrollHeight;
-      input.value = "";
+      const box = document.getElementById("chatBox");
+      box.appendChild(cont);
+      box.scrollTop = box.scrollHeight;
+      inp.value = "";
     }
 
     function toggleUser() {
-      currentUser = currentUser === 1 ? 2 : 1;
-      const status = currentUser === 1 ? "Escribiendo como: Yo" : "Escribiendo como: 👽";
-      const arrow = currentUser === 1 ? "←" : "→";
-      document.getElementById("statusMessage").textContent = status;
-      document.getElementById("toggleBtn").textContent = arrow;
+      currentUser = currentUser===1?2:1;
+      document.getElementById("statusMessage")
+        .textContent = currentUser===1
+          ? "Escribiendo como: Yo"
+          : "Escribiendo como: 👽";
+      document.getElementById("toggleBtn")
+        .textContent = currentUser===1 ? "←":"→";
     }
 
     function toggleSecret() {
-      document.getElementById("chatContainer").classList.toggle("dark");
+      document.getElementById("chatContainer")
+        .classList.toggle("dark");
     }
 
-    document.getElementById("messageInput").addEventListener("keydown", function(event) {
-      if (event.key === "Enter") {
-sendMessage();
-}
-});
+    document.getElementById("messageInput")
+      .addEventListener("keydown", e => {
+        if (e.key==="Enter") sendMessage();
+      });
+
     setRandomBackground();
-</script> </body> </html>
+  </script>
+
+</body>
+</html>
